--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,14 +1,15 @@
 .custom_view_card {
+	background-color: var(--background-primary);
 	border: 1px solid var(--background-modifier-border);
 	border-radius: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
 }
 
 .bases-list-entry-body {
-	padding: 20px;
+	padding: 12px 20px;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
@@ -16,9 +17,15 @@
 	gap: 20px;
 }
 
+.base-list-entry-body-button {
+	cursor: pointer;
+	height: 48px;
+}
+
 .base-list-entry-text {
 	cursor: pointer;
 	font-size: large;
+	font-weight: 900;
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
@@ -31,6 +38,7 @@
 
 .base-list-entry-footer {
 	border-top: 1px solid var(--background-modifier-border);
+	background-color: var(--background-secondary);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -60,6 +68,7 @@
 	position: relative;
 	bottom: 0;
 	margin-bottom: 60px;
+	background-color: var(--background-primary-alt);
 }
 
 .bases-list-group-header {
